QE-799 Fix selected filters not wrapping in desktop

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/expedition-search/style.scss
@@ -247,14 +247,24 @@
 		margin-bottom: var(--spacing-5);
 		padding-bottom: var(--spacing-2);
 
+		@media screen and (min-width: calc(grid-size(lg) + 1px)) {
+			overflow-x: initial;
+			padding-bottom: 0; // This is removed because we don't have a scrollbar anymore
+		}
+
 		&-list {
 			display: flex;
 			gap: var(--spacing-3);
 			align-items: baseline;
 			min-width: max-content;
 
+			@media screen and (min-width: calc(grid-size(lg) + 1px)) {
+				min-width: initial;
+				flex-wrap: wrap;
+			}
+
 			#{$self}__selected-filter-pill {
-				flex: 1 0 max-content;
+				flex: 0 0 max-content;
 				display: flex;
 				padding: var(--spacing-2) var(--spacing-4);
 				border: 1px solid var(--color-gray-30);
@@ -279,6 +289,11 @@
 			gap: var(--spacing-3);
 			align-items: baseline;
 			min-width: max-content;
+
+			@media screen and (min-width: calc(grid-size(lg) + 1px)) {
+				min-width: initial;
+				flex-wrap: wrap;
+			}
 		}
 	}
 
